--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PORT=5000
+PORT=5016
 
-HOST=localhost
-DB=BADCLOUTDB
-USER=root
-PWD=1234
+MYSQL_HOST=129.148.42.252
+MYSQL_DB=BADCLOUTDB
+MYSQL_USER=admin
+MYSQL_PWD=@dm!n
